[gd_scene load_steps=22 format=2]

[ext_resource path="res://Imatges/Fondos/game_background_3/layers/ground_3.png" type="Texture" id=1]
[ext_resource path="res://Escenes/Ninja frog/Ninja_frog1.1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Imatges/Fondos/game_background_3/layers/sky.png" type="Texture" id=3]
[ext_resource path="res://Imatges/Fondos/game_background_3/layers/rocks.png" type="Texture" id=4]
[ext_resource path="res://Imatges/Fondos/game_background_3/layers/ground_1.png" type="Texture" id=5]
[ext_resource path="res://Imatges/Fondos/game_background_3/layers/clouds_1.png" type="Texture" id=6]
[ext_resource path="res://Imatges/Fondos/game_background_3/layers/ground_2.png" type="Texture" id=7]
[ext_resource path="res://Imatges/Fondos/game_background_3/layers/clouds_2.png" type="Texture" id=8]
[ext_resource path="res://Escenes/MASK DUDEEE.tscn" type="PackedScene" id=9]
[ext_resource path="res://Escenes/Centre.gd" type="Script" id=10]
[ext_resource path="res://Escenes/Tileset.tres" type="TileSet" id=11]
[ext_resource path="res://Escenes/Nivell 2.gd" type="Script" id=12]
[ext_resource path="res://Spikes.tscn" type="PackedScene" id=13]
[ext_resource path="res://Escenes/Spiked_Ball.tscn" type="PackedScene" id=14]
[ext_resource path="res://Escenes/Spiked_head.tscn" type="PackedScene" id=15]
[ext_resource path="res://Escenes/Fire.tscn" type="PackedScene" id=16]
[ext_resource path="res://Escenes/Trampoline.tscn" type="PackedScene" id=17]
[ext_resource path="res://Escenes/Woodfloor.tscn" type="PackedScene" id=18]
[ext_resource path="res://Escenes/Sierra.tscn" type="PackedScene" id=19]
[ext_resource path="res://Escenes/Start_point.tscn" type="PackedScene" id=20]
[ext_resource path="res://Escenes/Melon.tscn" type="PackedScene" id=21]

[node name="Nivell 2" type="Node2D"]
script = ExtResource( 12 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 1 )

[node name="Sky" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 511.5, 241.5 )
scale = Vector2( 0.530729, 0.743518 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 1e+07, 1080 )

[node name="ParallaxLayer8" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.05, 1 )

[node name="Clouds1" type="Sprite" parent="ParallaxBackground/ParallaxLayer8"]
position = Vector2( 511.5, 300 )
scale = Vector2( 0.528646, 0.544444 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 1e+06, 640 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 1 )

[node name="Rocks" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 511, 301 )
scale = Vector2( 0.530729, 0.541667 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 10, 1e+07, 1070 )

[node name="ParallaxLayer6" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.15, 1 )

[node name="Ground1" type="Sprite" parent="ParallaxBackground/ParallaxLayer6"]
position = Vector2( 509.5, 303 )
scale = Vector2( 0.532812, 0.537037 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 10, 1e+06, 1070 )

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.2, 1 )

[node name="Ground2" type="Sprite" parent="ParallaxBackground/ParallaxLayer5"]
position = Vector2( 510, 302.5 )
scale = Vector2( 0.530208, 0.539815 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 0, 40, 1e+06, 1040 )

[node name="ParallaxLayer7" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.25, 1 )

[node name="Clouds2" type="Sprite" parent="ParallaxBackground/ParallaxLayer7"]
position = Vector2( 514, 306 )
scale = Vector2( 0.530208, 0.546296 )
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 410, 330, 9.99978e+06, 410 )

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.3, 1 )

[node name="Ground3" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2( 509, 297 )
scale = Vector2( 0.530208, 0.55 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 40, 1e+07, 1040 )

[node name="Centre" type="Position2D" parent="."]
script = ExtResource( 10 )

[node name="Camera2D" type="Camera2D" parent="Centre"]
position = Vector2( 0, 3 )
current = true
zoom = Vector2( 0.63, 0.63 )
limit_left = 0
limit_top = -152
limit_right = 6364
limit_bottom = 576

[node name="Tween" type="Tween" parent="Centre"]

[node name="Ninja_frog" parent="." groups=["Ninja"] instance=ExtResource( 2 )]
position = Vector2( 45, 493 )

[node name="Pers2" parent="." instance=ExtResource( 9 )]
position = Vector2( 79, 493 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 11 )
cell_size = Vector2( 48, 48 )
format = 1
tile_data = PoolIntArray( -851916, 7, 0, -851907, 7, 0, -786380, 7, 0, -786371, 7, 0, -720844, 7, 0, -720835, 7, 0, -655308, 7, 0, -655299, 7, 0, -589772, 7, 0, -589763, 7, 0, -524236, 7, 0, -524227, 7, 0, -458700, 7, 0, -458691, 7, 0, -393164, 7, 0, -393155, 7, 0, -327628, 7, 0, -327619, 7, 0, -196609, 7, 0, -262135, 7, 0, -262134, 7, 0, -262133, 7, 0, -262132, 7, 0, -262131, 7, 0, -262130, 7, 0, -262129, 7, 0, -262128, 7, 0, -262127, 7, 0, -262126, 7, 0, -262125, 7, 0, -262124, 7, 0, -262123, 7, 0, -262122, 7, 0, -262121, 7, 0, -262120, 7, 0, -262119, 7, 0, -262118, 7, 0, -262117, 7, 0, -262116, 7, 0, -262115, 7, 0, -262114, 7, 0, -262113, 7, 0, -262112, 7, 0, -262111, 7, 0, -262110, 7, 0, -262109, 7, 0, -262108, 7, 0, -262107, 7, 0, -262106, 7, 0, -262105, 7, 0, -262104, 7, 0, -262103, 7, 0, -262102, 7, 0, -262101, 7, 0, -262100, 7, 0, -262099, 7, 0, -262098, 7, 0, -262097, 7, 0, -262096, 7, 0, -262095, 7, 0, -262094, 7, 0, -262093, 7, 0, -262092, 7, 0, -262083, 7, 0, -262082, 7, 0, -262081, 7, 0, -262080, 7, 0, -262079, 7, 0, -262078, 7, 0, -262077, 7, 0, -262076, 7, 0, -262075, 7, 0, -262074, 7, 0, -262073, 7, 0, -262072, 7, 0, -262071, 7, 0, -262070, 7, 0, -262069, 7, 0, -262068, 7, 0, -262067, 7, 0, -262066, 7, 0, -262065, 7, 0, -131073, 7, 0, -196597, 7, 0, -196596, 7, 0, -196595, 7, 0, -196594, 7, 0, -196593, 7, 0, -196592, 7, 0, -196591, 7, 0, -196590, 7, 0, -196589, 7, 0, -196588, 7, 0, -196587, 7, 0, -196586, 7, 0, -196585, 7, 0, -196584, 7, 0, -196583, 7, 0, -196582, 7, 0, -196581, 7, 0, -196580, 7, 0, -196579, 7, 0, -196578, 7, 0, -196577, 7, 0, -196576, 7, 0, -196575, 7, 0, -196574, 7, 0, -196573, 7, 0, -196572, 7, 0, -196571, 7, 0, -196570, 7, 0, -196569, 7, 0, -196568, 7, 0, -196567, 7, 0, -196566, 7, 0, -196565, 7, 0, -196564, 7, 0, -196563, 7, 0, -196562, 7, 0, -196561, 7, 0, -196560, 7, 0, -196559, 7, 0, -196558, 7, 0, -196557, 7, 0, -196556, 7, 0, -196538, 7, 0, -196537, 7, 0, -196536, 7, 0, -196535, 7, 0, -196534, 7, 0, -196533, 7, 0, -196532, 7, 0, -196531, 7, 0, -196530, 7, 0, -196529, 7, 0, -65537, 7, 0, -131060, 7, 0, -131059, 7, 0, -131058, 7, 0, -131057, 7, 0, -131056, 7, 0, -131055, 7, 0, -131054, 7, 0, -131053, 7, 0, -131052, 7, 0, -131051, 7, 0, -131050, 7, 0, -131049, 7, 0, -131048, 7, 0, -131047, 7, 0, -131046, 7, 0, -131045, 7, 0, -131044, 7, 0, -131043, 7, 0, -131042, 7, 0, -131041, 7, 0, -131040, 7, 0, -131039, 7, 0, -131038, 7, 0, -131037, 7, 0, -131036, 7, 0, -131035, 7, 0, -131034, 7, 0, -131033, 7, 0, -131032, 7, 0, -131031, 7, 0, -131030, 7, 0, -131029, 7, 0, -131028, 7, 0, -131027, 7, 0, -131026, 7, 0, -131025, 7, 0, -131024, 7, 0, -131023, 7, 0, -131022, 7, 0, -131021, 7, 0, -131020, 7, 0, -131011, 7, 0, -131010, 7, 0, -131009, 7, 0, -131008, 7, 0, -131007, 7, 0, -131006, 7, 0, -131002, 7, 0, -131001, 7, 0, -130993, 7, 0, -1, 7, 0, -65523, 7, 0, -65522, 7, 0, -65521, 7, 0, -65520, 7, 0, -65519, 7, 0, -65518, 7, 0, -65517, 7, 0, -65516, 7, 0, -65515, 7, 0, -65514, 7, 0, -65513, 7, 0, -65512, 7, 0, -65511, 7, 0, -65510, 7, 0, -65509, 7, 0, -65508, 7, 0, -65507, 7, 0, -65506, 7, 0, -65505, 7, 0, -65504, 7, 0, -65503, 7, 0, -65502, 7, 0, -65501, 7, 0, -65500, 7, 0, -65499, 7, 0, -65498, 7, 0, -65497, 7, 0, -65496, 7, 0, -65495, 7, 0, -65494, 7, 0, -65493, 7, 0, -65492, 7, 0, -65491, 7, 0, -65490, 7, 0, -65489, 7, 0, -65488, 7, 0, -65487, 7, 0, -65486, 7, 0, -65485, 7, 0, -65484, 7, 0, -65475, 7, 0, -65474, 7, 0, -65473, 7, 0, -65472, 7, 0, -65471, 7, 0, -65470, 7, 0, -65466, 7, 0, -65465, 7, 0, -65457, 7, 0, 65535, 7, 0, 14, 7, 0, 15, 7, 0, 16, 7, 0, 17, 7, 0, 18, 7, 0, 19, 7, 0, 20, 7, 0, 21, 7, 0, 22, 7, 0, 23, 7, 0, 24, 7, 0, 25, 7, 0, 26, 7, 0, 27, 7, 0, 28, 7, 0, 29, 7, 0, 30, 7, 0, 31, 7, 0, 32, 7, 0, 33, 7, 0, 34, 7, 0, 35, 7, 0, 36, 7, 0, 37, 7, 0, 38, 7, 0, 39, 7, 0, 40, 7, 0, 41, 7, 0, 42, 7, 0, 43, 7, 0, 44, 7, 0, 45, 7, 0, 46, 7, 0, 47, 7, 0, 48, 7, 0, 49, 7, 0, 50, 7, 0, 51, 7, 0, 52, 7, 0, 61, 7, 0, 62, 7, 0, 63, 7, 0, 70, 7, 0, 71, 7, 0, 79, 7, 0, 131071, 7, 0, 65551, 7, 0, 65552, 7, 0, 65553, 7, 0, 65554, 7, 0, 65555, 7, 0, 65556, 7, 0, 65557, 7, 0, 65558, 7, 0, 65559, 7, 0, 65560, 7, 0, 65561, 7, 0, 65562, 7, 0, 65563, 7, 0, 65564, 7, 0, 65565, 7, 0, 65566, 7, 0, 65567, 7, 0, 65568, 7, 0, 65569, 7, 0, 65570, 7, 0, 65571, 7, 0, 65572, 7, 0, 65573, 7, 0, 65574, 7, 0, 65575, 7, 0, 65576, 7, 0, 65577, 7, 0, 65578, 7, 0, 65579, 7, 0, 65580, 7, 0, 65581, 7, 0, 65582, 7, 0, 65583, 7, 0, 65584, 7, 0, 65585, 7, 0, 65586, 7, 0, 65587, 7, 0, 65588, 7, 0, 65597, 7, 0, 65598, 7, 0, 65599, 7, 0, 65605, 7, 0, 65606, 7, 0, 65607, 7, 0, 65615, 7, 0, 196607, 7, 0, 131088, 7, 0, 131089, 7, 0, 131090, 7, 0, 131091, 7, 0, 131092, 7, 0, 131093, 7, 0, 131094, 7, 0, 131095, 7, 0, 131096, 7, 0, 131097, 7, 0, 131098, 7, 0, 131099, 7, 0, 131100, 7, 0, 131101, 7, 0, 131102, 7, 0, 131103, 7, 0, 131104, 7, 0, 131105, 7, 0, 131106, 7, 0, 131107, 7, 0, 131108, 7, 0, 131109, 7, 0, 131110, 7, 0, 131111, 7, 0, 131112, 7, 0, 131113, 7, 0, 131114, 7, 0, 131115, 7, 0, 131116, 7, 0, 131117, 7, 0, 131118, 7, 0, 131119, 7, 0, 131120, 7, 0, 131121, 7, 0, 131122, 7, 0, 131123, 7, 0, 131124, 7, 0, 131125, 7, 0, 131133, 7, 0, 131134, 7, 0, 131135, 7, 0, 131140, 7, 0, 131141, 7, 0, 131142, 7, 0, 131147, 7, 0, 131151, 7, 0, 262143, 7, 0, 196628, 7, 0, 196629, 7, 0, 196655, 7, 0, 196656, 7, 0, 196657, 7, 0, 196658, 7, 0, 196659, 7, 0, 196669, 7, 0, 196670, 7, 0, 196671, 7, 0, 196682, 7, 0, 196683, 7, 0, 196687, 7, 0, 327679, 7, 0, 262192, 7, 0, 262193, 7, 0, 262194, 7, 0, 262205, 7, 0, 262206, 7, 0, 262207, 7, 0, 262217, 7, 0, 262218, 7, 0, 262219, 7, 0, 262223, 7, 0, 393215, 7, 0, 327741, 7, 0, 327742, 7, 0, 327743, 7, 0, 327744, 7, 0, 327745, 7, 0, 327746, 7, 0, 327747, 7, 0, 327748, 7, 0, 327749, 7, 0, 327750, 7, 0, 327751, 7, 0, 327752, 7, 0, 327753, 7, 0, 327754, 7, 0, 327755, 7, 0, 327759, 7, 0, 458751, 7, 0, 393236, 7, 0, 393237, 7, 0, 393276, 7, 0, 393277, 7, 0, 393278, 7, 0, 393279, 7, 0, 393295, 7, 0, 524287, 7, 0, 458768, 7, 0, 458769, 7, 0, 458770, 7, 0, 458771, 7, 0, 458772, 7, 0, 458773, 7, 0, 458774, 7, 0, 458775, 7, 0, 458776, 7, 0, 458777, 7, 0, 458778, 7, 0, 458779, 7, 0, 458780, 7, 0, 458781, 7, 0, 458782, 7, 0, 458783, 7, 0, 458784, 7, 0, 458785, 7, 0, 458786, 7, 0, 458787, 7, 0, 458788, 7, 0, 458789, 7, 0, 458790, 7, 0, 458791, 7, 0, 458792, 7, 0, 458793, 7, 0, 458794, 7, 0, 458795, 7, 0, 458796, 7, 0, 458797, 7, 0, 458798, 7, 0, 458799, 7, 0, 458800, 7, 0, 458801, 7, 0, 458802, 7, 0, 458803, 7, 0, 458804, 7, 0, 458805, 7, 0, 458813, 7, 0, 458814, 7, 0, 458815, 7, 0, 458831, 7, 0, 589823, 7, 0, 524303, 7, 0, 524304, 7, 0, 524305, 7, 0, 524306, 7, 0, 524307, 7, 0, 524308, 7, 0, 524309, 7, 0, 524310, 7, 0, 524311, 7, 0, 524312, 7, 0, 524313, 7, 0, 524314, 7, 0, 524315, 7, 0, 524316, 7, 0, 524317, 7, 0, 524318, 7, 0, 524319, 7, 0, 524320, 7, 0, 524321, 7, 0, 524322, 7, 0, 524323, 7, 0, 524324, 7, 0, 524325, 7, 0, 524326, 7, 0, 524327, 7, 0, 524328, 7, 0, 524329, 7, 0, 524330, 7, 0, 524331, 7, 0, 524332, 7, 0, 524333, 7, 0, 524334, 7, 0, 524335, 7, 0, 524336, 7, 0, 524337, 7, 0, 524338, 7, 0, 524339, 7, 0, 524340, 7, 0, 524341, 7, 0, 524342, 7, 0, 524348, 7, 0, 524349, 7, 0, 524350, 7, 0, 524351, 7, 0, 524367, 7, 0, 655359, 7, 0, 589838, 7, 0, 589839, 7, 0, 589840, 7, 0, 589841, 7, 0, 589842, 7, 0, 589843, 7, 0, 589844, 7, 0, 589845, 7, 0, 589846, 7, 0, 589847, 7, 0, 589848, 7, 0, 589849, 7, 0, 589850, 7, 0, 589851, 7, 0, 589852, 7, 0, 589853, 7, 0, 589854, 7, 0, 589855, 7, 0, 589856, 7, 0, 589857, 7, 0, 589858, 7, 0, 589859, 7, 0, 589860, 7, 0, 589861, 7, 0, 589862, 7, 0, 589863, 7, 0, 589864, 7, 0, 589865, 7, 0, 589866, 7, 0, 589867, 7, 0, 589868, 7, 0, 589869, 7, 0, 589870, 7, 0, 589871, 7, 0, 589872, 7, 0, 589873, 7, 0, 589874, 7, 0, 589875, 7, 0, 589876, 7, 0, 589877, 7, 0, 589878, 7, 0, 589879, 7, 0, 589883, 7, 0, 589884, 7, 0, 589885, 7, 0, 589886, 7, 0, 589887, 7, 0, 589892, 7, 0, 589893, 7, 0, 589894, 7, 0, 589895, 7, 0, 589896, 7, 0, 589897, 7, 0, 589898, 7, 0, 589899, 7, 0, 589900, 7, 0, 589901, 7, 0, 589902, 7, 0, 589903, 7, 0, 720895, 7, 0, 655373, 7, 0, 655374, 7, 0, 655375, 7, 0, 655376, 7, 0, 655377, 7, 0, 655378, 7, 0, 655379, 7, 0, 655380, 7, 0, 655381, 7, 0, 655382, 7, 0, 655383, 7, 0, 655384, 7, 0, 655385, 7, 0, 655386, 7, 0, 655387, 7, 0, 655388, 7, 0, 655389, 7, 0, 655390, 7, 0, 655391, 7, 0, 655392, 7, 0, 655393, 7, 0, 655394, 7, 0, 655395, 7, 0, 655396, 7, 0, 655397, 7, 0, 655398, 7, 0, 655399, 7, 0, 655400, 7, 0, 655401, 7, 0, 655402, 7, 0, 655403, 7, 0, 655404, 7, 0, 655405, 7, 0, 655406, 7, 0, 655407, 7, 0, 655408, 7, 0, 655409, 7, 0, 655410, 7, 0, 655411, 7, 0, 655412, 7, 0, 655413, 7, 0, 655414, 7, 0, 655415, 7, 0, 655416, 7, 0, 655418, 7, 0, 655419, 7, 0, 655420, 7, 0, 655421, 7, 0, 655422, 7, 0, 655423, 7, 0, 786431, 7, 0, 720896, 7, 0, 720897, 7, 0, 720898, 7, 0, 720899, 7, 0, 720900, 7, 0, 720901, 7, 0, 720902, 7, 0, 720903, 7, 0, 720904, 7, 0, 720905, 7, 0, 720906, 7, 0, 720907, 7, 0, 720908, 7, 0, 720909, 7, 0, 720910, 7, 0, 720911, 7, 0, 720912, 7, 0, 720913, 7, 0, 720914, 7, 0, 720915, 7, 0, 720916, 7, 0, 720917, 7, 0, 720918, 7, 0, 720919, 7, 0, 720920, 7, 0, 720921, 7, 0, 720922, 7, 0, 720923, 7, 0, 720924, 7, 0, 720925, 7, 0, 720926, 7, 0, 720927, 7, 0, 720928, 7, 0, 720929, 7, 0, 720930, 7, 0, 720931, 7, 0, 720932, 7, 0, 720933, 7, 0, 720934, 7, 0, 720935, 7, 0, 720936, 7, 0, 720937, 7, 0, 720938, 7, 0, 720939, 7, 0, 720940, 7, 0, 720941, 7, 0, 720942, 7, 0, 720943, 7, 0, 720944, 7, 0, 720945, 7, 0, 720946, 7, 0, 720947, 7, 0, 720948, 7, 0, 720949, 7, 0, 720950, 7, 0, 720951, 7, 0, 720952, 7, 0, 720953, 7, 0, 720954, 7, 0, 720955, 7, 0, 720956, 7, 0, 720957, 7, 0, 720958, 7, 0, 720959, 7, 0, 720960, 7, 0, 720961, 7, 0, 720962, 7, 0, 720963, 7, 0, 720964, 7, 0, 720965, 7, 0, 720966, 7, 0, 720967, 7, 0, 720968, 7, 0, 720969, 7, 0, 720970, 7, 0, 720971, 7, 0, 720972, 7, 0, 720973, 7, 0, 720974, 7, 0, 720975, 7, 0 )

[node name="Spikes" parent="." instance=ExtResource( 13 )]
position = Vector2( 937, 314 )

[node name="Spikes2" parent="." instance=ExtResource( 13 )]
position = Vector2( 1946, 314 )

[node name="Spikes3" parent="." instance=ExtResource( 13 )]
position = Vector2( 2089, 314 )

[node name="Spikes4" parent="." instance=ExtResource( 13 )]
position = Vector2( 1898, 314 )

[node name="Spikes5" parent="." instance=ExtResource( 13 )]
position = Vector2( 2041, 314 )

[node name="Spikes6" parent="." instance=ExtResource( 13 )]
position = Vector2( 1994, 314 )

[node name="Spikes7" parent="." instance=ExtResource( 13 )]
position = Vector2( 2137, 314 )

[node name="Spikes8" parent="." instance=ExtResource( 13 )]
position = Vector2( 2185, 314 )

[node name="Spikes9" parent="." instance=ExtResource( 13 )]
position = Vector2( 2712, 458 )

[node name="Spikes14" parent="." instance=ExtResource( 13 )]
position = Vector2( 2616, 123 )
rotation = 1.57798

[node name="Spikes10" parent="." instance=ExtResource( 13 )]
position = Vector2( 2856, 312 )
rotation = -1.57671

[node name="Spikes18" parent="." instance=ExtResource( 13 )]
position = Vector2( 3768, 120 )
rotation = -1.57671

[node name="Spikes19" parent="." instance=ExtResource( 13 )]
position = Vector2( 3768, 168 )
rotation = -1.57671

[node name="Spikes21" parent="." instance=ExtResource( 13 )]
position = Vector2( 3768, 264 )
rotation = -1.57671

[node name="Spikes20" parent="." instance=ExtResource( 13 )]
position = Vector2( 3768, 216 )
rotation = -1.57671

[node name="Spikes11" parent="." instance=ExtResource( 13 )]
position = Vector2( 2665, 410 )

[node name="Spikes12" parent="." instance=ExtResource( 13 )]
position = Vector2( 2858, 410 )

[node name="Spikes13" parent="." instance=ExtResource( 13 )]
position = Vector2( 2810, 458 )

[node name="Spikes15" parent="." instance=ExtResource( 13 )]
position = Vector2( 3338, 218 )

[node name="Spikes16" parent="." instance=ExtResource( 13 )]
position = Vector2( 3292, 218 )

[node name="Spikes17" parent="." instance=ExtResource( 13 )]
position = Vector2( 3384, 218 )

[node name="Spikes22" parent="." instance=ExtResource( 13 )]
position = Vector2( 3289, 409 )

[node name="Spiked_Ball" parent="." instance=ExtResource( 14 )]
position = Vector2( 2902, 361 )

[node name="Spiked_Ball2" parent="." instance=ExtResource( 14 )]
position = Vector2( 2374, 316 )

[node name="Spiked_Ball3" parent="." instance=ExtResource( 14 )]
position = Vector2( 3097, 216 )

[node name="Spiked_Ball4" parent="." instance=ExtResource( 14 )]
position = Vector2( 3477, 216 )

[node name="Spiked_Ball5" parent="." instance=ExtResource( 14 )]
position = Vector2( 3099, 504 )

[node name="Spiked_head" parent="." instance=ExtResource( 15 )]
position = Vector2( 1732, 294 )

[node name="Spiked_head2" parent="." instance=ExtResource( 15 )]
position = Vector2( 1819, 294 )

[node name="Spiked_head3" parent="." instance=ExtResource( 15 )]
position = Vector2( 3218, 120 )

[node name="Spiked_head4" parent="." instance=ExtResource( 15 )]
position = Vector2( 3737, -37 )

[node name="Spiked_head5" parent="." instance=ExtResource( 15 )]
position = Vector2( 3502, -37 )

[node name="Spiked_head6" parent="." instance=ExtResource( 15 )]
position = Vector2( 3217, 432 )

[node name="Fire" parent="." instance=ExtResource( 16 )]
position = Vector2( 1091, 314 )

[node name="Fire2" parent="." instance=ExtResource( 16 )]
position = Vector2( 1163, 314 )

[node name="Fire3" parent="." instance=ExtResource( 16 )]
position = Vector2( 1234, 314 )

[node name="Fire4" parent="." instance=ExtResource( 16 )]
position = Vector2( 3756, 410 )

[node name="Fire5" parent="." instance=ExtResource( 16 )]
position = Vector2( 3685, 410 )

[node name="Sierra" parent="." instance=ExtResource( 19 )]
position = Vector2( 1380, 230 )

[node name="Sierra2" parent="." instance=ExtResource( 19 )]
position = Vector2( 1554, 230 )

[node name="Sierra3" parent="." instance=ExtResource( 19 )]
position = Vector2( 1467, 230 )

[node name="Sierra4" parent="." instance=ExtResource( 19 )]
position = Vector2( 2754, 26 )

[node name="Sierra7" parent="." instance=ExtResource( 19 )]
position = Vector2( 2754, 138 )

[node name="Sierra5" parent="." instance=ExtResource( 19 )]
position = Vector2( 2143, 249 )

[node name="Sierra6" parent="." instance=ExtResource( 19 )]
position = Vector2( 1969, 253 )

[node name="Sierra8" parent="." instance=ExtResource( 19 )]
position = Vector2( 3289, -47 )

[node name="Sierra9" parent="." instance=ExtResource( 19 )]
position = Vector2( 3677, 121 )

[node name="Sierra10" parent="." instance=ExtResource( 19 )]
position = Vector2( 3677, 191 )

[node name="Sierra11" parent="." instance=ExtResource( 19 )]
position = Vector2( 3677, 259 )

[node name="Sierra12" parent="." instance=ExtResource( 19 )]
position = Vector2( 3527, 333 )

[node name="Sierra13" parent="." instance=ExtResource( 19 )]
position = Vector2( 3411, 403 )

[node name="Sierra14" parent="." instance=ExtResource( 19 )]
position = Vector2( 3099, 322 )

[node name="Trampoline" parent="." instance=ExtResource( 17 )]
position = Vector2( 2761, 501 )

[node name="Trampoline2" parent="." instance=ExtResource( 17 )]
position = Vector2( 2905, 262 )

[node name="Trampoline3" parent="." instance=ExtResource( 17 )]
position = Vector2( 2569, 69 )

[node name="TimerTrampolin" type="Timer" parent="."]
wait_time = 0.9

[node name="Node2D2" type="Node2D" parent="."]
position = Vector2( 1164, 250 )

[node name="Node2D" parent="Node2D2" instance=ExtResource( 18 )]

[node name="Start_point" parent="." instance=ExtResource( 20 )]
position = Vector2( 49, 481 )

[node name="TimerStart" type="Timer" parent="."]

[node name="Apple" parent="." instance=ExtResource( 21 )]
position = Vector2( 3047, -112 )

[node name="TimerApple" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="Spikes" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spikes2" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spikes3" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spikes4" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spikes5" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spikes6" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spikes7" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spikes8" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spikes9" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spikes14" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spikes10" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spikes18" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spikes19" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spikes21" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spikes20" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spikes11" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spikes12" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spikes13" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spikes15" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spikes16" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spikes17" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spikes22" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spiked_Ball" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spiked_Ball2" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spiked_Ball3" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spiked_Ball4" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spiked_Ball5" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spiked_head" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spiked_head2" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spiked_head3" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spiked_head4" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spiked_head5" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Spiked_head6" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Fire" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Fire2" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Fire3" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Fire4" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Fire5" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Sierra" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Sierra2" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Sierra3" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Sierra4" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Sierra7" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Sierra5" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Sierra6" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Sierra8" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Sierra9" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Sierra10" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Sierra11" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Sierra12" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Sierra13" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Sierra14" to="." method="_on_Die_body_entered"]
[connection signal="body_entered" from="Trampoline" to="." method="_on_Trampoline_body_entered"]
[connection signal="body_entered" from="Trampoline2" to="." method="_on_Trampoline_body_entered"]
[connection signal="body_entered" from="Trampoline3" to="." method="_on_Trampoline_body_entered"]
[connection signal="timeout" from="TimerTrampolin" to="." method="_on_TimerTrampolin_timeout"]
[connection signal="body_entered" from="Start_point" to="." method="_on_Start_point_body_entered"]
[connection signal="timeout" from="TimerStart" to="." method="_on_TimerStart_timeout"]
[connection signal="body_entered" from="Apple" to="." method="_on_Apple_body_entered"]
[connection signal="timeout" from="TimerApple" to="." method="_on_TimerApple_timeout"]
